# EdgeViewer

./: .gitignore  README.md
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/hamsa/edgeviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edgeviewer..cpp  native-lib.cpp
app/src/main/java/com/hamsa/edgeviewer/: CameraHelper.kt  MainActivity.kt  NativeBridge.kt
app/src/main/java/com/hamsa/edgeviewer/gl/: GLRenderer.kt  GLTextureRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hamsa/edgeviewer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  index.ts  package-lock.json  package.json  styles.css  tsconfig.json
